Fri Mar  3 15:25:42 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added to one of the tests in apitest a check that the weights
	  returned by a query are as expected.  This will fail if weighting
	  schemes are changed, deliberately or accidentally.

Fri Mar  3 11:25:36 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* OmQuery now does a better job of collapsing sub-queries
	  with the same operator.  Yet another test now passes.

Thu Mar  2 17:47:29 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Moved omenquire and omstem into new directory api

	* Split omenquire.cc into omenquire, omquery, and omdatabase

Thu Mar  2 14:53:47 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed all mentions of virtual inheritance.
	
Thu Mar  2 10:58:19 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Begun to abstract statistics requesting and collecting operations
	  (common/stats.h)

	* Made heirarchy of Match objects: Match, LeafMatch, MultiMatch.

Thu Mar  2 10:39:20 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added locks to OmDatabase methods

Wed Mar  1 19:14:02 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Separated OmDatabase out from OmEnquire, and fixed the tests.

Tue Feb 29 17:41:32 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change OmMatch to LeafMatch.  Make LeafMatch inherit from Match,
	  which is currently an empty class, but will be a base class for
	  all match objects.

Tue Feb 29 10:49:54 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed apitest following the stemming changes

	* Fixed a bug which broke query length calculation

Mon Feb 28 17:26:01 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a test for the query collapsing, along with a fix.

Mon Feb 28 16:32:22 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Queries now combine identical terms into a single term